fix dashboard mobile view takes too much space
See http://builds-artifacts.piwik.org/ui-tests.master/13566.7/UIIntegrationTest_dashboard5_mobile

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -18,9 +18,9 @@
   }
 
   .top_controls #periodString,
-  .top_controls .dashboardSettings,
-  .top_controls #segmentEditorPanel {
-    position: static;
+  .top_controls .dashboardSettings,  
+  .top_controls .segmentEditorPanel {
+    position: static !important;
     margin: 0 0 10px;
     float: none;
   }
